--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "express-hbs": "^1.0.4",
     "materialize-css": "^1.0.0-rc.1"
   }
 }
