--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   },
   "homepage": "https://github.com/startsole/startsole2-backend-mockup#readme",
   "dependencies": {
-    "body-parser": "^1.18.2",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-hbs": "^1.0.4",
-    "materialize-css": "^1.0.0-rc.1"
+    "materialize-css": "^1.0.0-rc.1",
+    "parse": "^1.11.1"
   }
 }
