added dashboard controller with function to build line graph of users by month from Jan-Sept of 2018, added dashboard view with charts.js from CDN, WIP sole approval route (do not use this yet... need to check with Frans about Startistics model in cloud code)

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/startsole/startsole2#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "chart.js": "^2.7.2",
     "dropzone": "^5.4.0",
     "express": "^4.16.3",
     "express-hbs": "^1.0.4",
