--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-hbs": "^1.0.4",
     "masonry-layout": "^4.2.1",
     "materialize-css": "^1.0.0-rc.1",
+    "moment": "^2.24.0",
     "parse": "^1.11.1",
     "progressbar.js": "^1.0.1"
   }
