--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,3 +8,22 @@ jobs:
     - checkout
     - run: npm install
     #- run: npm test
+  deploy:
+    machine:
+      enabled: true
+    steps:
+    - run:
+        name: Deploy Staging
+        command: |
+          ssh $SSH_USER@$SSH_HOST_STAGING "cd sole/webapp2/startsole2/; git pull;"
+workflows:
+  version: 2
+  build-and-deploy:
+    jobs:
+    - build
+    - deploy:
+        requires:
+        - build
+        filters:
+          branches:
+            only: staging
