--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,7 @@ jobs:
     steps:
     - run:
         name: Deploy Staging
-        command: |
-          ssh $SSH_USER@$SSH_HOST_STAGING "cd sole/webapp2/startsole2/; git pull;"
+        command: ssh $SSH_USER@$SSH_HOST_STAGING "cd sole/webapp2/startsole2/; git pull;"
 workflows:
   version: 2
   build-and-deploy:
