Starting to set up circle ci for this project (#234)
* WIP playing with circle-ci, sorry for the commits. testing out deploying to staging

* WIP playing with circle-ci, sorry for the commits. testing out deploying to staging

* WIP playing with circle-ci, sorry for the commits. testing out deploying to staging

* WIP playing with circle-ci, sorry for the commits. testing out deploying to staging

* WIP playing with circle-ci, sorry for the commits. testing out deploying to staging

* Ok, I think this will do it now. When we commit to the staging branch, this circle ci will deploy to the staging server. Fingers crossed!

* Works! changing order of git commands tho

* Ok, now I'm trying to add production too

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,3 +8,39 @@ jobs:
     - checkout
     - run: npm install
     #- run: npm test
+  deploy-to-staging:
+    machine:
+      enabled: true
+    steps:
+    - run:
+        name: Deploy to Staging
+        command: |
+          ssh $SSH_USER@$SSH_HOST_STAGING "cd sole/webapp2/startsole2/; git checkout staging; git pull;"
+  deploy:
+    machine:
+      enabled: true
+    steps:
+    - run:
+        name: Deploy to Production
+        command: |
+          ssh $SSH_USER@$SSH_HOST "cd sole/webapp2/startsole2/; git checkout master; git pull;"
+workflows:
+  version: 2
+  build-and-deploy-to-staging:
+    jobs:
+    - build
+    - deploy-to-staging:
+        requires:
+        - build
+        filters:
+          branches:
+            only: staging
+  build-and-deploy-to-production:
+    jobs:
+    - build
+    - deploy:
+        requires:
+        - build
+        filters:
+          branches:
+            only: master
