--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
     - checkout
     - run: npm install
-    #- run: npm test
+    - run: npm test
   deploy-to-staging:
     machine:
       enabled: true
