Lots of internal improvements
* Feature continuous integration clean up (#241)

* Staging to master from feature branch (#239)

* WIP playing with circle-ci, sorry for the commits. testing out deploying to staging

* WIP playing with circle-ci, sorry for the commits. testing out deploying to staging

* WIP playing with circle-ci, sorry for the commits. testing out deploying to staging

* WIP playing with circle-ci, sorry for the commits. testing out deploying to staging

* WIP playing with circle-ci, sorry for the commits. testing out deploying to staging

* Ok, I think this will do it now. When we commit to the staging branch, this circle ci will deploy to the staging server. Fingers crossed!

* Works! changing order of git commands tho

* Ok, now I'm trying to add production too

* Ok, now I'm trying to add production too

* Sending some sample tests to see if circle ci will run them (#237)

* Sending some sample tests to see if circle ci will run them

* Sending some sample tests to see if circle ci will run them

* Sending some sample tests to see if circle ci will run them

* typo

* remove deploy scripts. related to #231

* Refactor controllers to classes (#243)

* WIP refactor sole controller to be a class instead of a module export. remove console.logs that are not for error logging. related to #227

* refactor more of the controllers to be classes. related to #227

* refactored resources. related to #227

* Staging to master from feature branch (#239)

* WIP playing with circle-ci, sorry for the commits. testing out deploying to staging

* WIP playing with circle-ci, sorry for the commits. testing out deploying to staging

* WIP playing with circle-ci, sorry for the commits. testing out deploying to staging

* WIP playing with circle-ci, sorry for the commits. testing out deploying to staging

* WIP playing with circle-ci, sorry for the commits. testing out deploying to staging

* Ok, I think this will d

--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "materialize-css": "^1.0.0-rc.1",
     "moment": "^2.24.0",
     "parse": "^1.11.1",
-    "progressbar.js": "^1.0.1"
+    "performance-now": "^2.1.0",
+    "progressbar.js": "^1.0.1",
+    "slack": "^11.0.2",
+    "winston": "^2.4.4"
   },
   "devDependencies": {
     "eslint": "^5.15.1",
