Add session to cookie, remove from URL (#269)
* Feature adding fernando resource (#266)

added a downloadable resource and link to the resources page

* typo fix

* Feature put sesh in cookie (#268)

* WIP removing sesh stuff

* WIP removing sesh stuff from server.js

* WIP some es6 updates, remove vars replace with const or let

* WIP weirdly we don't have logger here yet. Idk why, but we'll have to merge that in before deploying. So I removed logger for now and replaced them with console. I'll logger stuff in before deploying

* remove sesh from all views. i believe is ready to merge, but we're waiting until we have a finished greasemonkey script before doing that.

* resolve conflicts, removed console.logs

--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "chart.js": "^2.7.2",
+    "cookie-parser": "^1.4.4",
     "dropzone": "^5.4.0",
     "express": "^4.16.3",
     "express-hbs": "^1.0.4",
+    "express-session": "^1.15.6",
     "masonry-layout": "^4.2.1",
     "materialize-css": "^1.0.0-rc.1",
     "moment": "^2.24.0",
