--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "mocha tests/tests.js",
+    "test": "mocha tests/tests.js --exit",
     "lint": "eslint ."
   },
   "repository": {
